--- a/week4.html
+++ b/week4.html
@@ -110,13 +110,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (5)</b></font></td></tr>
 <tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>KMiller</td>       <td></td><td align=right>0</td></tr>
-<tr><td>RWhite</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Mattison</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Musgrave</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Moody</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Young</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -141,9 +141,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
 <tr><td>Cousins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>BHall</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
+<tr><td>RJohnson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kirk</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DCarlson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
