--- a/week8.html
+++ b/week8.html
@@ -11,7 +11,7 @@
 <tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
@@ -22,13 +22,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (6)</b></font></td></tr>
 <tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
-<tr><td>JWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Moss</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Spears</td>        <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
+<tr><td>Demercado</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -97,7 +97,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (4)</b></font></td></tr>
 <tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Dillon</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
 <tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
