--- a/week8.html
+++ b/week8.html
@@ -84,7 +84,7 @@
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>CWatson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>-</td>             <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
@@ -109,13 +109,13 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
-<tr><td>JHill</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Cousins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
+<tr><td>BHall</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DCarlson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
