--- a/week11.html
+++ b/week11.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>160</td></tr>
+<tr><td>JCook</td>         <td></td><td align=right>85</td></tr>
 <tr><td>KMitchell</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Collins</td>       <td></td><td align=right>30</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>45</td></tr>
 <tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>O'Connell</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>15</td></tr>
+<tr><td>O'Connell</td>     <td></td><td align=right>140</td></tr>
+<tr><td></td>              <td></td><td align=right>475</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (3)</b></font></td></tr>
-<tr><td>Jackson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Jackson</td>       <td></td><td align=right>190</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>85</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
-<tr><td>DAdams</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Levis</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>30</td></tr>
+<tr><td>DAdams</td>        <td></td><td align=right>165</td></tr>
+<tr><td>Hockenson</td>     <td></td><td align=right>25</td></tr>
+<tr><td>Aubrey</td>        <td></td><td align=right>65</td></tr>
+<tr><td>Levis</td>         <td></td><td align=right>125</td></tr>
+<tr><td></td>              <td></td><td align=right>685</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (2)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>50</td></tr>
+<tr><td>Etienne</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Swift</td>         <td></td><td align=right>85</td></tr>
+<tr><td>Thielen</td>       <td></td><td align=right>35</td></tr>
+<tr><td>Ridley</td>        <td></td><td align=right>200</td></tr>
 <tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>55</td></tr>
 <tr><td>Vaughn</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>450</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (5)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mattison</td>      <td></td><td align=right>0</td></tr>
-<tr><td>RWhite</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>225</td></tr>
+<tr><td>Mattison</td>      <td></td><td align=right>40</td></tr>
+<tr><td>RWhite</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>50</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>50</td></tr>
 <tr><td>Musgrave</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Moody</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Young</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Moody</td>         <td></td><td align=right>65</td></tr>
+<tr><td>Young</td>         <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>505</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (4)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>150</td></tr>
 <tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>St Brown</td>      <td></td><td align=right>110</td></tr>
+<tr><td>DMoore</td>        <td></td><td align=right>145</td></tr>
+<tr><td>-</td>             <td></td><td align=right>0</td></tr>
 <tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Dell</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Dell</td>          <td></td><td align=right>195</td></tr>
+<tr><td></td>              <td></td><td align=right>600</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (7)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>75</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Njoku</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DeVito</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>80</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>170</td></tr>
+<tr><td>KAllen</td>        <td></td><td align=right>130</td></tr>
+<tr><td>Njoku</td>         <td></td><td align=right>25</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>85</td></tr>
+<tr><td>DeVito</td>        <td></td><td align=right>235</td></tr>
+<tr><td></td>              <td></td><td align=right>800</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (6)</b></font></td></tr>
-<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Tagovailoa</td>    <td></td><td align=right>180</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Charbonnet</td>    <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>170</td></tr>
 <tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>350</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>Dobbs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>BHall</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Dobbs</td>         <td></td><td align=right>155</td></tr>
+<tr><td>Pollard</td>       <td></td><td align=right>180</td></tr>
+<tr><td>BHall</td>         <td></td><td align=right>100</td></tr>
+<tr><td>Aiyuk</td>         <td></td><td align=right>200</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>50</td></tr>
+<tr><td>LaPorta</td>       <td></td><td align=right>5</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>55</td></tr>
+<tr><td>Gibbs</td>         <td></td><td align=right>75</td></tr>
+<tr><td></td>              <td></td><td align=right>820</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (8)</b></font></td></tr>
-<tr><td>Lawrence</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Lawrence</td>      <td></td><td align=right>290</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>30</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>60</td></tr>
 <tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
 <tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>50</td></tr>
+<tr><td>McManus</td>       <td></td><td align=right>70</td></tr>
 <tr><td>ThmpsnRobinson</td><td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>500</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
-<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>85</td></tr>
 <tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Sutton</td>        <td></td><td align=right>105</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>90</td></tr>
+<tr><td>Lutz</td>          <td></td><td align=right>170</td></tr>
+<tr><td>Stroud</td>        <td></td><td align=right>230</td></tr>
+<tr><td></td>              <td></td><td align=right>705</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -167,42 +167,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Randy(7)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>6640</font></td>
-    <td><font size=2>4890</font></td>
+    <td><font size=2>7440</font></td>
+    <td><font size=2>5490</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>1</font></td>
+<tr><td><font size=2>Grant(9)</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>6095</font></td>
+    <td><font size=2>5985</font></td>
+    <td><font size=2>850</font></td>
+    <td><font size=2>225</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>States(5)</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5575</font></td>
-    <td><font size=2>5905</font></td>
+    <td><font size=2>6080</font></td>
+    <td><font size=2>6355</font></td>
     <td><font size=2>1060</font></td>
     <td><font size=2>230</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Grant(9)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5275</font></td>
-    <td><font size=2>5635</font></td>
-    <td><font size=2>850</font></td>
-    <td><font size=2>225</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(3)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6130</font></td>
-    <td><font size=2>6480</font></td>
+    <td><font size=2>6815</font></td>
+    <td><font size=2>6955</font></td>
     <td><font size=2>1000</font></td>
     <td><font size=2>300</font></td>
     <td><font size=2>3</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>5855</font></td>
-    <td><font size=2>6800</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>6330</font></td>
+    <td><font size=2>7485</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>0</font></td>
@@ -216,41 +216,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Steven(6)</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5950</font></td>
-    <td><font size=2>5375</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6300</font></td>
+    <td><font size=2>6195</font></td>
     <td><font size=2>915</font></td>
     <td><font size=2>345</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>John(4)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>6430</font></td>
-    <td><font size=2>5825</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>7030</font></td>
+    <td><font size=2>6625</font></td>
     <td><font size=2>965</font></td>
     <td><font size=2>385</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5525</font></td>
-    <td><font size=2>5580</font></td>
-    <td><font size=2>825</font></td>
-    <td><font size=2>255</font></td>
-    <td><font size=2>1</font></td>
 <tr><td><font size=2>Matthew(10)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>7120</font></td>
-    <td><font size=2>6900</font></td>
+    <td><font size=2>7825</font></td>
+    <td><font size=2>7400</font></td>
     <td><font size=2>1180</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>4</font></td>
+<tr><td><font size=2>Rich(2)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>5975</font></td>
+    <td><font size=2>6085</font></td>
+    <td><font size=2>825</font></td>
+    <td><font size=2>255</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Mike(8)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>4965</font></td>
-    <td><font size=2>6075</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>5465</font></td>
+    <td><font size=2>6780</font></td>
     <td><font size=2>695</font></td>
     <td><font size=2>320</font></td>
     <td><font size=2>0</font></td>
